corpus/c/redefinition/case-01/snapshots/gcc15/render.verbose.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: duplicate definition detected
--> src/main.c:2:5
help: add or fix include guards, or remove the duplicate definition
why: redefinition of 'counter'
| src/main.c:2:5
| int counter = 1;
|     ^
note: previous definition of 'counter' with type 'int'
debug: rule_id=rule.family.redefinition.message_terms
debug: matched_conditions=message_contains=redefinition of, phase=semantic
error: duplicate definition detected
--> src/main.c:2:5
help: add or fix include guards, or remove the duplicate definition
why: src/main.c:2:5: error: redefinition of 'counter'
| src/main.c:2:5
| int counter = 1;
|     ^
raw:
  src/main.c:2:5: error: redefinition of 'counter'
debug: rule_id=rule.family.redefinition.message_terms
debug: matched_conditions=message_contains=redefinition of, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output